--- a/.gitignore
+++ b/.gitignore
@@ -244,4 +244,4 @@ $RECYCLE.BIN/
 # End of https://www.gitignore.io/api/osx,linux,python,windows,pycharm,visualstudiocode
 
 .aws-sam/
-.hello_world/credentials.json
+hello_world/credentials.json
